# Obscura

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  USER_GUIDE.md  build.ps1  capacitor.config.ts  debug_metadata.json  index.html  localhost+2-key.pem  localhost+2.pem  mobile.html  package-lock.json  package.json  tasks.md  temp_player.css  tokens.json  tsc_output.txt  tsconfig.json  tsconfig.node.tsbuildinfo  typescript-errors.txt  verify_store_syntax.ts  vite.config.ts  vite.mobile.config.ts  vite.tauri.config.ts
.cert/: cert.pem  key.pem
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.sidecar-data/: server-config.json
android/app/: build.gradle
apps/android/: .gitignore  build.gradle  gradle.properties  variables.gradle
apps/desktop/: package.json
dist-mobile/: index.html
dist-mobile/assets/: main-C99rR91b.css  main-D1I5b8nb.js
docs/: ROUND1_REMEDIATION_ASSIGNMENT_2026-03-05.md  ROUND1_REVIEW_SUPPLEMENT_DESIGN_QA_OPS_2026-03-05.md  ROUND_DESIGN_DELIVERABLE_2026-03-05.md  ROUND_DESIGN_SUPPLEMENT_PLAN_2026-03-05.md  TAURI_MIGRATION_PLAN.md  TAURI_PARITY_MATRIX.md  api-data.js  app.js  index.html  run.cmd  style.css
docs/templates/: library_color_name_validation_20samples.csv
electron/: ElectronPlatformAdapter.ts  audio-ipc.ts  check_db_url.cjs  crypto-utils.ts  database.legacy.ts  database.ts  discord.ts  downloader.ts  error-logger.ts  ffmpeg-path.ts  ffmpeg.ts  get_file_path.cjs  main.ts  preload.cjs  server.ts  settings.ts  shared-library.ts  test_debug_niconico.cjs  test_logic.cjs  test_logic.ts  test_script.ts  updater.ts  utils.ts  watcher.ts
electron/mpv/: mpv-controller.ts
plugins/: creator-manager.js  extensibility-demo.js  niconico.js
scripts/: bump-version.js  free-port.cjs  generate-latest-yml.cjs  generate-test-tokens.ts  kill-obscura-dev.cjs  prepare-tauri-node.cjs  tauri-sidecar.cjs  test-api.ts  update_imports.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: android-adapter.ts  electron-adapter.ts  types.ts
src/components/: ArtistFilterDropdown.css  ArtistFilterDropdown.tsx  AudioSettingsModal.tsx  AuditLogModal.tsx  ConfirmModal.css  ConfirmModal.tsx  ContextMenu.tsx  DateFilterDropdown.css  DateFilterDropdown.tsx  DuplicateModal.css  DuplicateModal.tsx  DuplicateResolutionModal.tsx  DuplicateResultModal.tsx  DuplicateSearchModal.tsx  (+41 more)
(+164 files in other folders)
