[package]
name = "obscura-tauri"
version = "0.8.16"
description = "Obscura Tauri host"
authors = ["84kb"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-drag = "2.1.0"
rodio = { version = "0.21.1", default-features = false, features = ["playback", "symphonia-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = false
